force-app/main/default/objects/Assessment__c/fields/S15_Professional_Assessment_Text__c.field-meta.xml
<CustomField>
    <fullName>S15_Professional_Assessment_Text__c</fullName>
    <label>S15: Professional Assessment Text</label>
    <type>TextArea</type>
</CustomField>