force-app/main/default/objects/Assessment__c/fields/S15_Reassessment__c.field-meta.xml
<CustomField>
    <fullName>S15_Reassessment__c</fullName>
    <label>S15: Reassessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>