force-app/main/default/objects/Assessment__c/fields/S15_Reassessment_Text__c.field-meta.xml
<CustomField>
    <fullName>S15_Reassessment_Text__c</fullName>
    <label>S15: Reassessment Text</label>
    <type>TextArea</type>
</CustomField>