force-app/main/default/objects/Assessment__c/fields/S15_Signed_Application_Text__c.field-meta.xml
<CustomField>
    <fullName>S15_Signed_Application_Text__c</fullName>
    <label>S15: Signed Application Text</label>
    <type>TextArea</type>
</CustomField>