force-app/main/default/objects/Assessment__c/fields/S15_Written_Eligibility_Reqs_Text__c.field-meta.xml
<CustomField>
    <fullName>S15_Written_Eligibility_Reqs_Text__c</fullName>
    <label>S15: Written Eligibility Reqs Text</label>
    <type>TextArea</type>
</CustomField>