force-app/main/default/objects/Assessment__c/fields/S16_Background_Checks__c.field-meta.xml
<CustomField>
    <fullName>S16_Background_Checks__c</fullName>
    <label>S16: Background Checks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>