force-app/main/default/objects/Assessment__c/fields/S16_Background_Checks_Text__c.field-meta.xml
<CustomField>
    <fullName>S16_Background_Checks_Text__c</fullName>
    <label>S16: Background Checks Text</label>
    <type>TextArea</type>
</CustomField>