force-app/main/default/objects/Assessment__c/fields/S16_Collateral_Information_Text__c.field-meta.xml
<CustomField>
    <fullName>S16_Collateral_Information_Text__c</fullName>
    <label>S16: Collateral Information Text</label>
    <type>TextArea</type>
</CustomField>