force-app/main/default/objects/Assessment__c/fields/S16_Gather_Information_Text__c.field-meta.xml
<CustomField>
    <fullName>S16_Gather_Information_Text__c</fullName>
    <label>S16: Gather Information Text</label>
    <type>TextArea</type>
</CustomField>