force-app/main/default/objects/Assessment__c/fields/S16_In_Person_Interview__c.field-meta.xml
<CustomField>
    <fullName>S16_In_Person_Interview__c</fullName>
    <label>S16: In-Person Interview</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>