force-app/main/default/objects/Assessment__c/fields/S16_In_Person_Interview_Text__c.field-meta.xml
<CustomField>
    <fullName>S16_In_Person_Interview_Text__c</fullName>
    <label>S16: In-Person Interview Text</label>
    <type>TextArea</type>
</CustomField>