force-app/main/default/objects/Assessment__c/fields/S16_References_Text__c.field-meta.xml
<CustomField>
    <fullName>S16_References_Text__c</fullName>
    <label>S16: References Text</label>
    <type>TextArea</type>
</CustomField>