force-app/main/default/objects/Assessment__c/fields/S16_Signed_Application__c.field-meta.xml
<CustomField>
    <fullName>S16_Signed_Application__c</fullName>
    <label>S16: Signed Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>