force-app/main/default/objects/Assessment__c/fields/S16_Signed_Application_Text__c.field-meta.xml
<CustomField>
    <fullName>S16_Signed_Application_Text__c</fullName>
    <label>S16: Signed Application Text</label>
    <type>TextArea</type>
</CustomField>