force-app/main/default/objects/Assessment__c/fields/S16_Written_Eligibility_Reqs_Text__c.field-meta.xml
<CustomField>
    <fullName>S16_Written_Eligibility_Reqs_Text__c</fullName>
    <label>S16: Written Eligibility Reqs Text</label>
    <type>TextArea</type>
</CustomField>