force-app/main/default/objects/Assessment__c/fields/S17_Interactive__c.field-meta.xml
<CustomField>
    <fullName>S17_Interactive__c</fullName>
    <label>S17: Interactive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>