force-app/main/default/objects/Assessment__c/fields/S17_Interactive_Text__c.field-meta.xml
<CustomField>
    <fullName>S17_Interactive_Text__c</fullName>
    <label>S17: Interactive Text</label>
    <type>TextArea</type>
</CustomField>