force-app/main/default/objects/Assessment__c/fields/S17_Pre_Match_Children__c.field-meta.xml
<CustomField>
    <fullName>S17_Pre_Match_Children__c</fullName>
    <label>S17: Pre-Match Child(ren)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>