force-app/main/default/objects/Assessment__c/fields/S17_Pre_Match_Children_Text__c.field-meta.xml
<CustomField>
    <fullName>S17_Pre_Match_Children_Text__c</fullName>
    <label>S17: Pre-Match Child(ren) Text</label>
    <type>TextArea</type>
</CustomField>