force-app/main/default/objects/Assessment__c/fields/S17_Pre_Match_Parent_Guardian_Text__c.field-meta.xml
<CustomField>
    <fullName>S17_Pre_Match_Parent_Guardian_Text__c</fullName>
    <label>S17: Pre-Match Parent/Guardian Text</label>
    <type>TextArea</type>
</CustomField>