force-app/main/default/objects/Assessment__c/fields/S17_Pre_Match_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>S17_Pre_Match_Volunteer__c</fullName>
    <label>S17: Pre-Match Volunteer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>