force-app/main/default/objects/Assessment__c/fields/S17_Prior_to_Match__c.field-meta.xml
<CustomField>
    <fullName>S17_Prior_to_Match__c</fullName>
    <label>S17: Prior to Match</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>