force-app/main/default/objects/Assessment__c/fields/S17_Prior_to_Match_Text__c.field-meta.xml
<CustomField>
    <fullName>S17_Prior_to_Match_Text__c</fullName>
    <label>S17: Prior to Match Text</label>
    <type>TextArea</type>
</CustomField>