force-app/main/default/objects/Assessment__c/fields/S18_Assess_All_Information__c.field-meta.xml
<CustomField>
    <fullName>S18_Assess_All_Information__c</fullName>
    <label>S18: Assess All Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>