force-app/main/default/objects/Assessment__c/fields/S18_Assess_All_Information_Text__c.field-meta.xml
<CustomField>
    <fullName>S18_Assess_All_Information_Text__c</fullName>
    <label>S18: Assess All Information Text</label>
    <type>TextArea</type>
</CustomField>