force-app/main/default/objects/Assessment__c/fields/S18_Child_Approval_Text__c.field-meta.xml
<CustomField>
    <fullName>S18_Child_Approval_Text__c</fullName>
    <label>S18: Child Approval Text</label>
    <type>TextArea</type>
</CustomField>