force-app/main/default/objects/Assessment__c/fields/S18_Parent_Guardian_Involvement__c.field-meta.xml
<CustomField>
    <fullName>S18_Parent_Guardian_Involvement__c</fullName>
    <label>S18: Parent/Guardian Involvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>