force-app/main/default/objects/Assessment__c/fields/S18_Parent_Guardian_Involvement_Text__c.field-meta.xml
<CustomField>
    <fullName>S18_Parent_Guardian_Involvement_Text__c</fullName>
    <label>S18: Parent/Guardian Involvement Text</label>
    <type>TextArea</type>
</CustomField>