force-app/main/default/objects/Assessment__c/fields/S18_Post_Match_Meeting_Text__c.field-meta.xml
<CustomField>
    <fullName>S18_Post_Match_Meeting_Text__c</fullName>
    <label>S18: Post-Match Meeting Text</label>
    <type>TextArea</type>
</CustomField>