force-app/main/default/objects/Assessment__c/fields/S18_Pre_Match_Presentation__c.field-meta.xml
<CustomField>
    <fullName>S18_Pre_Match_Presentation__c</fullName>
    <label>S18: Pre-Match Presentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>