force-app/main/default/objects/Assessment__c/fields/S18_Pre_Match_Presentation_Text__c.field-meta.xml
<CustomField>
    <fullName>S18_Pre_Match_Presentation_Text__c</fullName>
    <label>S18: Pre-Match Presentation Text</label>
    <type>TextArea</type>
</CustomField>