force-app/main/default/objects/Assessment__c/fields/S18_Signed_Match_Agreement__c.field-meta.xml
<CustomField>
    <fullName>S18_Signed_Match_Agreement__c</fullName>
    <label>S18: Signed Match Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>