force-app/main/default/objects/Assessment__c/fields/S18_Signed_Match_Agreement_Text__c.field-meta.xml
<CustomField>
    <fullName>S18_Signed_Match_Agreement_Text__c</fullName>
    <label>S18: Signed Match Agreement Text</label>
    <type>TextArea</type>
</CustomField>