force-app/main/default/objects/Assessment__c/fields/S18_Volunteer_Approval_Text__c.field-meta.xml
<CustomField>
    <fullName>S18_Volunteer_Approval_Text__c</fullName>
    <label>S18: Volunteer Approval Text</label>
    <type>TextArea</type>
</CustomField>