force-app/main/default/objects/Assessment__c/fields/S18_Written_Documentation_Text__c.field-meta.xml
<CustomField>
    <fullName>S18_Written_Documentation_Text__c</fullName>
    <label>S18: Written Documentation Text</label>
    <type>TextArea</type>
</CustomField>