force-app/main/default/objects/Assessment__c/fields/S19_Parent_Volunteer_Review__c.field-meta.xml
<CustomField>
    <fullName>S19_Parent_Volunteer_Review__c</fullName>
    <label>S19: Parent/Volunteer Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>