force-app/main/default/objects/Assessment__c/fields/S19_Parent_Volunteer_Review_Text__c.field-meta.xml
<CustomField>
    <fullName>S19_Parent_Volunteer_Review_Text__c</fullName>
    <label>S19: Parent/Volunteer Review Text</label>
    <type>TextArea</type>
</CustomField>