force-app/main/default/objects/Assessment__c/fields/S19_Written_YODP__c.field-meta.xml
<CustomField>
    <fullName>S19_Written_YODP__c</fullName>
    <label>S19: Written YODP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>