force-app/main/default/objects/Assessment__c/fields/S19_Written_YODP_Text__c.field-meta.xml
<CustomField>
    <fullName>S19_Written_YODP_Text__c</fullName>
    <label>S19: Written YODP Text</label>
    <type>TextArea</type>
</CustomField>