force-app/main/default/objects/Assessment__c/fields/S19_YODP_Reviewed_Annually__c.field-meta.xml
<CustomField>
    <fullName>S19_YODP_Reviewed_Annually__c</fullName>
    <label>S19: YODP Reviewed Annually</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>