force-app/main/default/objects/Assessment__c/fields/S19_YODP_Reviewed_Annually_Text__c.field-meta.xml
<CustomField>
    <fullName>S19_YODP_Reviewed_Annually_Text__c</fullName>
    <label>S19: YODP Reviewed Annually Text</label>
    <type>TextArea</type>
</CustomField>