force-app/main/default/objects/Assessment__c/fields/S1_Board_Governance_Standards__c.field-meta.xml
<CustomField>
    <fullName>S1_Board_Governance_Standards__c</fullName>
    <label>S1: Board/Governance Standards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>