force-app/main/default/objects/Assessment__c/fields/S1_Board_Governance_Standards_Text__c.field-meta.xml
<CustomField>
    <fullName>S1_Board_Governance_Standards_Text__c</fullName>
    <label>S1: Board/Governance Standards Text</label>
    <type>TextArea</type>
</CustomField>