force-app/main/default/objects/Assessment__c/fields/S20_Contacts_Documented_Text__c.field-meta.xml
<CustomField>
    <fullName>S20_Contacts_Documented_Text__c</fullName>
    <label>S20: Contacts Documented Text</label>
    <type>TextArea</type>
</CustomField>