force-app/main/default/objects/Assessment__c/fields/S20_Follow_Required_Schedule__c.field-meta.xml
<CustomField>
    <fullName>S20_Follow_Required_Schedule__c</fullName>
    <label>S20: Follow Required Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>