force-app/main/default/objects/Assessment__c/fields/S20_Follow_Required_Schedule_Text__c.field-meta.xml
<CustomField>
    <fullName>S20_Follow_Required_Schedule_Text__c</fullName>
    <label>S20: Follow Required Schedule Text</label>
    <type>TextArea</type>
</CustomField>