force-app/main/default/objects/Assessment__c/fields/S21_Attempts_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>S21_Attempts_to_Contact__c</fullName>
    <label>S21: Attempts to Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>