force-app/main/default/objects/Assessment__c/fields/S21_Attempts_to_Contact_Text__c.field-meta.xml
<CustomField>
    <fullName>S21_Attempts_to_Contact_Text__c</fullName>
    <label>S21: Attempts to Contact Text</label>
    <type>TextArea</type>
</CustomField>