force-app/main/default/objects/Assessment__c/fields/S21_Final_Communication__c.field-meta.xml
<CustomField>
    <fullName>S21_Final_Communication__c</fullName>
    <label>S21: Final Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>