force-app/main/default/objects/Assessment__c/fields/S21_Final_Communication_Text__c.field-meta.xml
<CustomField>
    <fullName>S21_Final_Communication_Text__c</fullName>
    <label>S21: Final Communication Text</label>
    <type>TextArea</type>
</CustomField>