force-app/main/default/objects/Assessment__c/fields/S21_Written_Assessment__c.field-meta.xml
<CustomField>
    <fullName>S21_Written_Assessment__c</fullName>
    <label>S21: Written Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>