force-app/main/default/objects/Assessment__c/fields/S21_Written_Notification_Text__c.field-meta.xml
<CustomField>
    <fullName>S21_Written_Notification_Text__c</fullName>
    <label>S21: Written Notification Text</label>
    <type>TextArea</type>
</CustomField>