force-app/main/default/objects/Assessment__c/fields/S22_Absent_6_Months_or_More__c.field-meta.xml
<CustomField>
    <fullName>S22_Absent_6_Months_or_More__c</fullName>
    <label>S22: Absent 6 Months or More</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>