force-app/main/default/objects/Assessment__c/fields/S22_Absent_6_Months_or_More_Text__c.field-meta.xml
<CustomField>
    <fullName>S22_Absent_6_Months_or_More_Text__c</fullName>
    <label>S22: Absent 6 Months or More Text</label>
    <type>TextArea</type>
</CustomField>