force-app/main/default/objects/Assessment__c/fields/S22_Absent_Less_That_1_Year__c.field-meta.xml
<CustomField>
    <fullName>S22_Absent_Less_That_1_Year__c</fullName>
    <label>S22: Absent Less That 1 Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>