force-app/main/default/objects/Assessment__c/fields/S22_Absent_More_Than_1_Year_Text__c.field-meta.xml
<CustomField>
    <fullName>S22_Absent_More_Than_1_Year_Text__c</fullName>
    <label>S22: Absent More Than 1 Year Text</label>
    <type>TextArea</type>
</CustomField>