force-app/main/default/objects/Assessment__c/fields/S22_Background_Check_Text__c.field-meta.xml
<CustomField>
    <fullName>S22_Background_Check_Text__c</fullName>
    <label>S22: Background Check Text</label>
    <type>TextArea</type>
</CustomField>