force-app/main/default/objects/Assessment__c/fields/S22_Completion_of_Updated_Form__c.field-meta.xml
<CustomField>
    <fullName>S22_Completion_of_Updated_Form__c</fullName>
    <label>S22: Completion of Updated Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>