force-app/main/default/objects/Assessment__c/fields/S22_Completion_of_Updated_Form_Text__c.field-meta.xml
<CustomField>
    <fullName>S22_Completion_of_Updated_Form_Text__c</fullName>
    <label>S22: Completion of Updated Form Text</label>
    <type>TextArea</type>
</CustomField>