force-app/main/default/objects/Assessment__c/fields/S22_Comprehensive_Review__c.field-meta.xml
<CustomField>
    <fullName>S22_Comprehensive_Review__c</fullName>
    <label>S22: Comprehensive Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>