force-app/main/default/objects/Assessment__c/fields/S22_Comprehensive_Review_Text__c.field-meta.xml
<CustomField>
    <fullName>S22_Comprehensive_Review_Text__c</fullName>
    <label>S22: Comprehensive Review Text</label>
    <type>TextArea</type>
</CustomField>