force-app/main/default/objects/Assessment__c/fields/S22_Professional_Assessment_Text__c.field-meta.xml
<CustomField>
    <fullName>S22_Professional_Assessment_Text__c</fullName>
    <label>S22: Professional Assessment Text</label>
    <type>TextArea</type>
</CustomField>