force-app/main/default/objects/Assessment__c/fields/S22_Re_match_After_Absence__c.field-meta.xml
<CustomField>
    <fullName>S22_Re_match_After_Absence__c</fullName>
    <label>S22: Re-match After Absence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>