force-app/main/default/objects/Assessment__c/fields/S22_Re_match_After_Absence_Text__c.field-meta.xml
<CustomField>
    <fullName>S22_Re_match_After_Absence_Text__c</fullName>
    <label>S22: Re-match After Absence Text</label>
    <type>TextArea</type>
</CustomField>