force-app/main/default/objects/Assessment__c/fields/S22_Review_Match_Closure__c.field-meta.xml
<CustomField>
    <fullName>S22_Review_Match_Closure__c</fullName>
    <label>S22: Review Match Closure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>