force-app/main/default/objects/Assessment__c/fields/S22_Review_Match_Closure_Text__c.field-meta.xml
<CustomField>
    <fullName>S22_Review_Match_Closure_Text__c</fullName>
    <label>S22: Review Match Closure Text</label>
    <type>TextArea</type>
</CustomField>