force-app/main/default/objects/Assessment__c/fields/S22_Training_Text__c.field-meta.xml
<CustomField>
    <fullName>S22_Training_Text__c</fullName>
    <label>S22: Training Text</label>
    <type>TextArea</type>
</CustomField>