force-app/main/default/objects/Assessment__c/fields/S23_Certification__c.field-meta.xml
<CustomField>
    <fullName>S23_Certification__c</fullName>
    <label>S23: Certification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>