force-app/main/default/objects/Assessment__c/fields/S23_Certification_Text__c.field-meta.xml
<CustomField>
    <fullName>S23_Certification_Text__c</fullName>
    <label>S23: Certification Text</label>
    <type>TextArea</type>
</CustomField>