force-app/main/default/objects/Assessment__c/fields/S23_Complete_within_30_Day__c.field-meta.xml
<CustomField>
    <fullName>S23_Complete_within_30_Day__c</fullName>
    <label>S23: Complete within 30 Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>