force-app/main/default/objects/Assessment__c/fields/S23_Complete_within_30_Day_Text__c.field-meta.xml
<CustomField>
    <fullName>S23_Complete_within_30_Day_Text__c</fullName>
    <label>S23: Complete within 30 Day Text</label>
    <type>TextArea</type>
</CustomField>