force-app/main/default/objects/Assessment__c/fields/S24_Confidentiality_Text__c.field-meta.xml
<CustomField>
    <fullName>S24_Confidentiality_Text__c</fullName>
    <label>S24: Confidentiality Text</label>
    <type>TextArea</type>
</CustomField>