force-app/main/default/objects/Assessment__c/fields/S24_Location_Security__c.field-meta.xml
<CustomField>
    <fullName>S24_Location_Security__c</fullName>
    <label>S24: Location / Security</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>