force-app/main/default/objects/Assessment__c/fields/S24_Location_Security_Text__c.field-meta.xml
<CustomField>
    <fullName>S24_Location_Security_Text__c</fullName>
    <label>S24: Location / Security Text</label>
    <type>TextArea</type>
</CustomField>