force-app/main/default/objects/Assessment__c/fields/S24_Purging_Shredding_Text__c.field-meta.xml
<CustomField>
    <fullName>S24_Purging_Shredding_Text__c</fullName>
    <label>S24: Purging / Shredding Text</label>
    <type>TextArea</type>
</CustomField>