force-app/main/default/objects/Assessment__c/fields/S24_Removal_of_Files__c.field-meta.xml
<CustomField>
    <fullName>S24_Removal_of_Files__c</fullName>
    <label>S24: Removal of Files</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>