force-app/main/default/objects/Assessment__c/fields/S24_Removal_of_Files_Text__c.field-meta.xml
<CustomField>
    <fullName>S24_Removal_of_Files_Text__c</fullName>
    <label>S24: Removal of Files Text</label>
    <type>TextArea</type>
</CustomField>