force-app/main/default/objects/Assessment__c/fields/S24_Secured_Separation__c.field-meta.xml
<CustomField>
    <fullName>S24_Secured_Separation__c</fullName>
    <label>S24: Secured Separation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>