force-app/main/default/objects/Assessment__c/fields/S24_Secured_Separation_Text__c.field-meta.xml
<CustomField>
    <fullName>S24_Secured_Separation_Text__c</fullName>
    <label>S24: Secured Separation Text</label>
    <type>TextArea</type>
</CustomField>