force-app/main/default/objects/Assessment__c/fields/S25_Feedback__c.field-meta.xml
<CustomField>
    <fullName>S25_Feedback__c</fullName>
    <label>S25: Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>