force-app/main/default/objects/Assessment__c/fields/S25_Reviews__c.field-meta.xml
<CustomField>
    <fullName>S25_Reviews__c</fullName>
    <label>S25: Reviews</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>