force-app/main/default/objects/Assessment__c/fields/S25_Standards_Text__c.field-meta.xml
<CustomField>
    <fullName>S25_Standards_Text__c</fullName>
    <label>S25: Standards Text</label>
    <type>TextArea</type>
</CustomField>